--- a/matrix-core/src/main/resources/properties/jdbc.properties
+++ b/matrix-core/src/main/resources/properties/jdbc.properties
@@ -1,7 +1,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1 
-jdbc_url=jdbc:mysql://localhost:3306/webcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+jdbc_url=jdbc:mysql://localhost:3306/matrixcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 jdbc_username=root
 jdbc_password=root 
 
