--- a/matrix-admin/src/main/webapp/WEB-INF/web.xml
+++ b/matrix-admin/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	
-	<display-name>example-ui</display-name>
+	<display-name>matrix-admin</display-name>
 	
 	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
