--- a/example-ui/pom.xml
+++ b/example-ui/pom.xml
@@ -15,7 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.power-matrix</groupId>
-			<artifactId>matrix-core</artifactId>
+			<artifactId>matrix-quartz</artifactId>
 			<version>${project.version}</version>
 		</dependency> 
 	</dependencies>
