--- a/matrix-admin/pom.xml
+++ b/matrix-admin/pom.xml
@@ -20,11 +20,11 @@
 			<version>${project.version}</version>
 		</dependency> 
 		
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.power-matrix</groupId>
 			<artifactId>matrix-quartz</artifactId>
 			<version>${project.version}</version>
-		</dependency> 
+		</dependency>  -->
 	</dependencies>
 	
 	<build>
