--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 	<description> The power matrix e-commerce platform </description>
 	<modules>
 		<module>matrix-core</module>
-		<!--<module>matrix-admin</module>-->
+		<module>matrix-admin</module>
 		<module>matrix-quartz</module> 
 		<!--<module>matrix-cache</module>-->
 		<!--<module>matrix-session</module>-->
 		<!--<module>matrix-jms</module> -->
-		<!--<module>power-api</module>-->
+		<module>power-api</module> 
 		<!--<module>power-redis</module>-->
 		<!--<module>power-picture</module>-->
 		<!--<module>power-open-api</module> -->
