--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,28 @@
 /power-api/.settings/
 /power-api/.project 
 /power-api/.classpath
+
+
+
+/power-cache/target/
+/power-cache/.settings/
+/power-cache/.project 
+/power-cache/.classpath
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
