power-cache 在设计上依然存在缺陷，等待改进

--- a/matrix-admin/pom.xml
+++ b/matrix-admin/pom.xml
@@ -14,15 +14,21 @@
 	<url>https://github.com/PowerYangcl</url>
 	
 	<dependencies> 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.power-matrix</groupId>
 			<artifactId>example-ui</artifactId>
 			<version>${project.version}</version>
-		</dependency> 
+		</dependency>  -->
+		
+		<!-- <dependency>
+			<groupId>com.power-matrix</groupId>
+			<artifactId>power-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>  -->
 		
 		<dependency>
 			<groupId>com.power-matrix</groupId>
-			<artifactId>power-api</artifactId>
+			<artifactId>power-cache</artifactId>
 			<version>${project.version}</version>
 		</dependency> 
 		
