--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -1,4 +1,4 @@
-@this$namespace=power-api
+@this$namespace=power-cache
 
 @add$matrix-core.initclass[api_system]=com.matrix.system.init.DictionaryTableCacheInit
 
@@ -7,3 +7,7 @@ table_name_list=table_1,table_2,table_3
  
  
  
+
+
+#定义redis的连接参数，标准为默认(default)|生产环境(master)|测试环境(test)|开发环境(dev)  四种。以cache_url_ 作为开始标识
+cache_url_default=192.168.1.268:8000,192.168.1.268:8001,192.168.1.268:8001
