--- a/matrix-core/src/main/resources/properties/jdbc.properties
+++ b/matrix-core/src/main/resources/properties/jdbc.properties
@@ -1,8 +1,16 @@
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1 
-jdbc_url=jdbc:mysql://localhost:3306/matrixcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-jdbc_username=root
-jdbc_password=root 
 
- 
+
+# 目前有效数据库：managercenter|matrixcore|test
+
+
+#jdbc_url=jdbc:mysql://localhost:3306/matrixcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+#jdbc_username=root
+#jdbc_password=root 
+
+# 涛哥的阿里云
+ jdbc_url=jdbc:mysql://114.215.164.197:3306/matrixcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+jdbc_username=root
+jdbc_password=123456
