--- a/matrix-admin/pom.xml
+++ b/matrix-admin/pom.xml
@@ -20,6 +20,12 @@
 			<version>${project.version}</version>
 		</dependency> 
 		
+		<dependency>
+			<groupId>com.power-matrix</groupId>
+			<artifactId>center-manager</artifactId>
+			<version>${project.version}</version>
+		</dependency> 
+		
 		<!-- <dependency>
 			<groupId>com.power-matrix</groupId>
 			<artifactId>power-api</artifactId>
