--- a/.gitignore
+++ b/.gitignore
@@ -47,10 +47,10 @@
 /center-manager/.classpath 
 
 
-/center-educational/target/
-/center-educational/.settings/
-/center-educational/.project 
-/center-educational/.classpath 
+/center-edu/target/
+/center-edu/.settings/
+/center-edu/.project 
+/center-edu/.classpath 
 
 
 
