--- a/matrix-admin/pom.xml
+++ b/matrix-admin/pom.xml
@@ -28,7 +28,7 @@
 		
 		<dependency>
 			<groupId>com.power-matrix</groupId>
-			<artifactId>center-educational</artifactId>
+			<artifactId>center-edu</artifactId>
 			<version>${project.version}</version>
 		</dependency> 
 		
