--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<!--<module>power-open-api</module> -->
 		<module>example-ui</module>
 		<module>center-manager</module>
-		<module>center-educational</module>
+		<module>center-edu</module>
     </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
