--- a/center-edu/pom.xml
+++ b/center-edu/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>matrix-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.zxing</groupId>
+		    <artifactId>core</artifactId>
+		    <version>3.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
 
