--- a/matrix-core/src/main/resources/properties/log4j.properties
+++ b/matrix-core/src/main/resources/properties/log4j.properties
@@ -1,5 +1,6 @@
 
-log4j.rootLogger=debug , Console , File ,  E      #此类型输出Linux服务器catalina.out日志信息过大，不推荐使用
+#此类型输出Linux服务器catalina.out日志信息过大，不推荐使用rzxlszy123YKPBGQC
+log4j.rootLogger=debug , Console , File ,  E      
 #log4j.rootLogger=info , Console , File , E 
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
@@ -8,7 +9,7 @@ log4j.appender.Console.layout.ConversionPattern=[%c]%m%n
 
 ### ============================输出到日志文件 ========================
 log4j.appender.File=org.apache.log4j.RollingFileAppender
-#log4j.appender.File=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.File=org.apache.log4j.DailyRollingFileAppender 
 log4j.appender.File.File=../logs/matrix_application.log
 log4j.appender.File.DatePattern='.'yyyy-MM-dd
 log4j.appender.File.encoding=UTF-8
