ContextLaunch 暂时有问题

--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -2,12 +2,23 @@
 
 @add$matrix-core.initclass[api_system]=com.matrix.system.init.DictionaryTableCacheInit
 
-#标识实例化该项目中的哪些字典表，所要实例化的表以逗号分隔
+# 标识实例化该项目中的哪些字典表，所要实例化的表以逗号分隔
 table_name_list=table_1,table_2,table_3
  
- 
- 
 
 
-#定义redis的连接参数，标准为默认(default)|生产环境(master)|测试环境(test)|开发环境(dev)  四种。以cache_url_ 作为开始标识
+# 定义redis的连接参数，标准为默认(default)|生产环境(master)|测试环境(test)|开发环境(dev)  四种。以cache_url_ 作为开始标识
 cache_url_default=192.168.1.268:8000,192.168.1.268:8001,192.168.1.268:8001
+
+# 缓存初始化类型。针对小型项目可以使用ServletContextApplication来提高性能
+# 可选：redis|application
+cache_launch_type=redis
+
+# 默认包路径：需要加载的字典缓存
+default_package_url=com.matrix.dict.
+# 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.UserRole|逗号分隔此处只写类名即可，如UserRole
+# 需要实现com.matrix.base.interfaces.IBaseCache接口
+sub_project_cache_init=
+
+
+
