--- a/center-manager/pom.xml
+++ b/center-manager/pom.xml
@@ -18,6 +18,11 @@
 			<artifactId>matrix-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.power-matrix</groupId>
+			<artifactId>power-cache</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
 
