--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -10,8 +10,8 @@ table_name_list=table_1,table_2,table_3
 # 定义redis的连接参数，标准为默认(default)|生产环境(master)|测试环境(test)|开发环境(dev)  四种。以cache_url_ 作为开始标识
 cache_url_default=192.168.1.268:8000,192.168.1.268:8001,192.168.1.268:8001
 
-# 缓存初始化类型。针对小型项目可以使用ServletContextApplication来提高性能
-# 可选：redis|application
+# 缓存初始化类型。针对小型项目可以使用ServletContext来提高性能
+# 可选：redis|context  
 cache_launch_type=redis
 
 # 默认包路径：需要加载的字典缓存
