--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -8,7 +8,8 @@ table_name_list=table_1,table_2,table_3
 
 
 # 定义redis的连接参数，标准为默认(default)|生产环境(master)|测试环境(test)|开发环境(dev)  四种。以cache_url_ 作为开始标识
-cache_url_default=192.168.1.268:8000,192.168.1.268:8001,192.168.1.268:8001
+#cache_url_default=192.168.1.268:8000,192.168.1.268:8001,192.168.1.268:8001
+cache_url_default=qhbeta-redis.qhw.srnpr.com:7000,qhbeta-redis.qhw.srnpr.com:7001,qhbeta-redis.qhw.srnpr.com:7002,qhbeta-redis.qhw.srnpr.com:7003,qhbeta-redis.qhw.srnpr.com:7004,qhbeta-redis.qhw.srnpr.com:7005,qhbeta-redis.qhw.srnpr.com:7006,qhbeta-redis.qhw.srnpr.com:7007,qhbeta-redis.qhw.srnpr.com:7008
 
 # 缓存初始化类型。针对小型项目可以使用ServletContext来提高性能
 # 可选：redis|context  
