--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -13,13 +13,13 @@ cache_url_default=qhbeta-redis.qhw.srnpr.com:7000,qhbeta-redis.qhw.srnpr.com:700
 
 # 缓存初始化类型。针对小型项目可以使用ServletContext来提高性能
 # 可选：redis|context  
-cache_launch_type=redis
+cache_launch_type=context
 
 # 默认包路径：需要加载的字典缓存
 default_package_url=com.matrix.dict.
-# 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.UserRole|逗号分隔此处只写类名即可，如UserRole
-# 需要实现com.matrix.base.interfaces.IBaseCache接口
-sub_project_cache_init=
+# 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.CacheUserRole|逗号分隔此处只写类名即可，如UserRole
+# 需要继承RootInit
+sub_project_cache_init=CacheUserRole
 
 
 
