优化缓存结构

--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -17,7 +17,7 @@ cache_launch_type=context
 
 # 默认包路径：需要加载的字典缓存
 default_package_url=com.matrix.dict.
-# 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.CacheUserRole|逗号分隔此处只写类名即可，如UserRole
+# 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.CacheUserRole|逗号分隔此处只写类名即可，如CacheUserRole
 # 需要继承RootInit
 sub_project_cache_init=CacheUserRole
 
