--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -1,6 +1,6 @@
 @this$namespace=power-cache
 
-@add$matrix-core.initclass[api_system]=com.matrix.system.init.DictionaryTableCacheInit
+@add$matrix-core.initclass[cache_system]=com.matrix.system.init.DictionaryTableCacheInit
 
 # 标识实例化该项目中的哪些字典表，所要实例化的表以逗号分隔
 table_name_list=table_1,table_2,table_3
@@ -13,7 +13,7 @@ cache_url_default=qhbeta-redis.qhw.srnpr.com:7000,qhbeta-redis.qhw.srnpr.com:700
 
 # 缓存初始化类型。针对小型项目可以使用ServletContext来提高性能
 # 可选：redis|context  
-cache_launch_type=context
+cache_launch_type=redis
 
 # 是否需要项目启动时重新加载缓存：true|false
 # 如果cache_launch_type=redis，可能需要重新加载部分字典类型的缓存
