用户自定义页面风格完成

--- a/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
+++ b/power-cache/src/main/resources/META-INF/matrix/config/config.power-cache.properties
@@ -23,7 +23,7 @@ cache_reload=true
 default_package_url=com.matrix.dict.
 # 需要缓存的类.每个子项目中用户初始化的字典类，如：com.matrix.dict.LoadCacheMcRole|逗号分隔此处只写类名即可，如LoadCacheMcRole
 # 需要继承RootInit
-sub_project_cache_init=LoadCacheMcRole,LoadCacheSysFunction,LoadCacheUserRole
+sub_project_cache_init=LoadCacheMcRole,LoadCacheSysFunction,LoadCacheUserRole,LoadCacheMcUserInfo
 
 
 
