session过期，登录页被内嵌iframe 解决

--- a/matrix-admin/src/main/webapp/WEB-INF/web.xml
+++ b/matrix-admin/src/main/webapp/WEB-INF/web.xml
@@ -69,4 +69,9 @@
 		<listener-class>org.springframework.web.util.Log4jConfigListener
 		</listener-class>
 	</listener>
+	
+	<!-- session设置为1天 -->
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 </web-app>
