ueditor自定义上传图片问题已解决，图片上传到独立服务器

--- a/matrix-core/src/main/resources/META-INF/matrix/config/config.matrix-core.properties
+++ b/matrix-core/src/main/resources/META-INF/matrix/config/config.matrix-core.properties
@@ -1,10 +1,14 @@
 @this$namespace=matrix-core
 
 #版本标记
-version=1.0.0.1
+version_default=1.0.0.1
+version_dev=1.0.0.1
+version_rc=1.0.0.1
+version_master=2.0.0.2
 
-#定义系统加载的模型类型  不同生产环境下该变量应该为不一样 开发环境为dev 测试环境为beta 候选版本为rc 生产版本为idc
-model=default
+#定义系统加载的模型类型  不同生产环境下该变量应该为不一样 开发环境为dev 测试环境为beta 候选版本为rc 生产版本为master
+#used in MatrixCoreInit.java
+model=dev
 
 matrix-core.version_default=1.0.0.1
 
@@ -21,3 +25,11 @@ log_type=localcache
 log_address=http://syidc-log.syw.srnpr.com/log/baselog
 
  
+# 上传文件地址
+upload_pic_url_beta=http://cfiles.beta.huijiayou.cn/cfiles/upload/realsave?zw_s_target=
+upload_pic_url_master=http://cfiles.beta.huijiayou.cn/cfiles/upload/realsave?zw_s_target=
+
+
+
+
+
