--- a/matrix-core/src/main/resources/properties/jdbc.properties
+++ b/matrix-core/src/main/resources/properties/jdbc.properties
@@ -8,5 +8,5 @@ validationQuery=SELECT 1
 
 # 数据库服务器已迁移
  jdbc_url=jdbc:mysql://112.126.93.46:3306/matrixcore?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-jdbc_username=
+jdbc_username=root
 jdbc_password=
