--- a/matrix-admin/pom.xml
+++ b/matrix-admin/pom.xml
@@ -30,6 +30,12 @@
 			<groupId>com.power-matrix</groupId>
 			<artifactId>center-media</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.power-matrix</groupId>
+			<artifactId>center-edu</artifactId>
+			<version>${project.version}</version>
 		</dependency> 
 		
 		<!-- <dependency>
