文章分类 增删改查 完成

--- a/center-media/src/main/resources/META-INF/matrix/info/info.center-manager.7000.properties
+++ b/center-media/src/main/resources/META-INF/matrix/info/info.center-manager.7000.properties
@@ -1,2 +1,11 @@
 
 700010001=删除成功
+700010002=分类名称不得为空!
+700010003=数据添加成功!
+700010004=添加数据失败!
+
+700010005=数据更新成功!
+700010006=更新数据失败!
+
+700010007=数据删除成功!
+700010008=删除数据失败!
